--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 
 <body>
 
+  <header class="text-center">
+    <h1 class="my-5 text-danger">Meet our Team</h1>
+    <p class="mx-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, vero. Beatae ratione, suscipit
+      mollitia itaque,
+      enim dicta, fugiat quaerat impedit quam quas expedita. Quidem consequuntur provident ullam! Voluptatum, esse
+      veritatis eos, nobis consectetur molestiae aperiam error temporibus neque commodi pariatur dolorem reprehenderit
+      repellat vel omnis, nihil accusamus quisquam architecto quia.</p>
+  </header>
+
   <script src="./js/script.js"></script>
 </body>
 
