[add] feat create container row col

--- a/index.html
+++ b/index.html
@@ -14,12 +14,27 @@
 
   <header class="text-center">
     <h1 class="my-5 text-danger">Meet our Team</h1>
-    <p class="mx-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, vero. Beatae ratione, suscipit
+    <p class="mx-3 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, vero. Beatae ratione, suscipit
       mollitia itaque,
       enim dicta, fugiat quaerat impedit quam quas expedita. Quidem consequuntur provident ullam! Voluptatum, esse
       veritatis eos, nobis consectetur molestiae aperiam error temporibus neque commodi pariatur dolorem reprehenderit
       repellat vel omnis, nihil accusamus quisquam architecto quia.</p>
   </header>
+
+  <main>
+
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+      </div>
+    </div>
+
+  </main>
 
   <script src="./js/script.js"></script>
 </body>
