[add] feat create col card

--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
   <main>
 
     <div class="container">
-      <div class="row g-4">
-        <div class="col-4"></div>
+      <div class="row">
+        <div class="col-1 p-0 align-middle">
+          <img class="img-fluid" src="./img/male1.png" alt="">
+        </div>
+        <div class="col-3 bg-dark text-light py-3">
+          <h4 class="card-title">Marco Bianchi</h4>
+          <p class="card-text m-0">Designer</p>
+          <p class="card-text text-primary">marcobianchi@team.com</p>
+        </div>
+
         <div class="col-4"></div>
         <div class="col-4"></div>
         <div class="col-4"></div>
