[add] fix col card

--- a/index.html
+++ b/index.html
@@ -24,21 +24,18 @@
   <main>
 
     <div class="container">
-      <div class="row">
-        <div class="col-1 p-0 align-middle">
-          <img class="img-fluid" src="./img/male1.png" alt="">
-        </div>
-        <div class="col-3 bg-dark text-light py-3">
-          <h4 class="card-title">Marco Bianchi</h4>
-          <p class="card-text m-0">Designer</p>
-          <p class="card-text text-primary">marcobianchi@team.com</p>
+      <div class="row gy-4 gx-4">
+        <div class="col-4 d-flex">
+          <div class="col-4 p-0">
+            <img class="img-fluid" src="./img/male1.png" alt="">
+          </div>
+          <div class="col-8 bg-dark text-light ps-4 lh-lg py-3">
+            <h4 class="card-title">Marco Bianchi</h4>
+            <p class="card-text m-0">Designer</p>
+            <p class="card-text text-primary">marcobianchi@team.com</p>
+          </div>
         </div>
 
-        <div class="col-4"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
       </div>
     </div>
 
