[add] feat card js

--- a/index.html
+++ b/index.html
@@ -24,19 +24,7 @@
   <main>
 
     <div class="container">
-      <div class="row gy-4 gx-4">
-        <div class="col-4 d-flex">
-          <div class="col-4 p-0">
-            <img class="img-fluid" src="./img/male1.png" alt="">
-          </div>
-          <div class="col-8 bg-dark text-light ps-4 lh-lg py-3">
-            <h4 class="card-title">Marco Bianchi</h4>
-            <p class="card-text m-0">Designer</p>
-            <p class="card-text text-primary">marcobianchi@team.com</p>
-          </div>
-        </div>
-
-      </div>
+      <div class="row gy-4 gx-4" id="our-team"></div>
     </div>
 
   </main>
