[add] feat input

--- a/index.html
+++ b/index.html
@@ -13,18 +13,39 @@
 <body>
 
   <header class="text-center">
+
     <h1 class="my-5 text-danger">Meet our Team</h1>
     <p class="mx-3 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, vero. Beatae ratione, suscipit
       mollitia itaque,
       enim dicta, fugiat quaerat impedit quam quas expedita. Quidem consequuntur provident ullam! Voluptatum, esse
       veritatis eos, nobis consectetur molestiae aperiam error temporibus neque commodi pariatur dolorem reprehenderit
       repellat vel omnis, nihil accusamus quisquam architecto quia.</p>
+
   </header>
 
   <main>
 
     <div class="container">
       <div class="row gy-4 gx-4" id="our-team"></div>
+
+      <div class="row text-center my-5">
+        <div class="col-6">
+          <input type="text" name="nome" id="nome" class="form-control" placeholder="Inserisci il tuo nome">
+        </div>
+        <div class="col-6">
+          <input type="text" name="ruolo" id="ruolo" class="form-control" placeholder="Inserisci il tuo ruolo">
+        </div>
+        <div class="col-6 mt-3">
+          <input type="email" name="mail" id="mail" class="form-control" placeholder="Inserisci la tua email">
+        </div>
+        <div class="col-6 mt-3">
+          <input type="text" name="img" id="img" class="form-control"
+            placeholder="Inserisci l'indirizzo di una tua immagine">
+        </div>
+        <div class="col-12 mt-4">
+          <button type="submit" id="button">Conferma</button>
+        </div>
+      </div>
     </div>
 
   </main>
