[add] feat add member

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <input type="email" name="mail" id="mail" class="form-control" placeholder="Inserisci la tua email">
         </div>
         <div class="col-6 mt-3">
-          <input type="text" name="img" id="img" class="form-control"
+          <input type="text" name="image" id="image" class="form-control"
             placeholder="Inserisci l'indirizzo di una tua immagine">
         </div>
         <div class="col-12 mt-4">
